--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shopping List</title>
   <link rel="stylesheet" href="style.css"></link>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="main.js" defer></script>
   <script src="https://kit.fontawesome.com/7f35c0b706.js" defer crossorigin="anonymous"></script>
 </head>
@@ -13,7 +16,10 @@
 
 <section class="todoApp">
   <header class="header">
+    <div class="header__date"></div>
+    <div class="header__name">
     Just do it <i class="fa-solid fa-check-double"></i> 
+    </div>    
   </header>
   <ul class="lists">
  
